Remove obsolete reference to standalone beamer template

--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -1338,9 +1338,7 @@ For \f[C]odt\f[] output, customize the \f[C]default.opendocument\f[]
 template.
 .IP \[bu] 2
 For \f[C]pdf\f[] output, customize the \f[C]default.latex\f[] template
-(or the \f[C]default.beamer\f[] template, if you use
-\f[C]\-t\ beamer\f[], or the \f[C]default.context\f[] template, if you
-use \f[C]\-t\ context\f[]).
+(or the \f[C]default.context\f[] template, if you use \f[C]\-t\ context\f[]).
 .IP \[bu] 2
 \f[C]docx\f[] has no template (however, you can use
 \f[C]\-\-reference\-doc\f[] to customize the output).
