Fixed revealjs slide column width issues.
* Remove "width" attribute which is not allowed on div.
* Remove space between `<div class="column">` elements,
  since this prevents columns whose widths sum to 100%
  (the space takes up space).

Closes #4028.

--- a/test/command/1710.md
+++ b/test/command/1710.md
@@ -19,19 +19,17 @@ ok
 <section id="slide-one" class="slide level1">
 <h1>Slide one</h1>
 <div class="columns">
-<div class="column" width="40%" style="width:40%;min-width:40%;vertical-align:top;">
+<div class="column" style="width:40%;min-width:40%;vertical-align:top;">
 <ul>
 <li>a</li>
 <li>b</li>
 </ul>
-</div>
-<div class="column" width="40%" style="width:40%;min-width:40%;vertical-align:top;">
+</div><div class="column" style="width:40%;min-width:40%;vertical-align:top;">
 <ul>
 <li>c</li>
 <li>d</li>
 </ul>
-</div>
-<div class="column" width="10%" style="width:10%;min-width:10%;vertical-align:top;">
+</div><div class="column" style="width:10%;min-width:10%;vertical-align:top;">
 <p>ok</p>
 </div>
 </div>
