--- a/test/command/1710.md
+++ b/test/command/1710.md
@@ -19,17 +19,17 @@ ok
 <section id="slide-one" class="slide level1">
 <h1>Slide one</h1>
 <div class="columns">
-<div class="column" style="width:40%;min-width:40%;vertical-align:top;">
+<div class="column" style="width:40%;">
 <ul>
 <li>a</li>
 <li>b</li>
 </ul>
-</div><div class="column" style="width:40%;min-width:40%;vertical-align:top;">
+</div><div class="column" style="width:40%;">
 <ul>
 <li>c</li>
 <li>d</li>
 </ul>
-</div><div class="column" style="width:10%;min-width:10%;vertical-align:top;">
+</div><div class="column" style="width:10%;">
 <p>ok</p>
 </div>
 </div>
