--- a/man/pandoc.1
+++ b/man/pandoc.1
@@ -239,7 +239,7 @@ Markdown), \f[C]markdown_strict\f[] (original unextended Markdown),
 Org mode), \f[C]mediawiki\f[] (MediaWiki markup), \f[C]twiki\f[] (TWiki
 markup), \f[C]tikiwiki\f[] (TikiWiki markup), \f[C]creole\f[] (Creole
 1.0), \f[C]haddock\f[] (Haddock markup), or \f[C]latex\f[] (LaTeX).
-(\f[C]markdown_github\f[] provides deprecated and less accurate suppport
+(\f[C]markdown_github\f[] provides deprecated and less accurate support
 for Github\-Flavored Markdown; please use \f[C]gfm\f[] instead, unless
 you need to use extensions other than \f[C]smart\f[].) If \f[C]+lhs\f[]
 is appended to \f[C]markdown\f[], \f[C]rst\f[], \f[C]latex\f[], or
@@ -286,7 +286,7 @@ show), \f[C]dzslides\f[] (DZSlides HTML5 + JavaScript slide show),
 \f[C]revealjs\f[] (reveal.js HTML5 + JavaScript slide show), \f[C]s5\f[]
 (S5 HTML and JavaScript slide show), or the path of a custom lua writer
 (see Custom writers, below).
-(\f[C]markdown_github\f[] provides deprecated and less accurate suppport
+(\f[C]markdown_github\f[] provides deprecated and less accurate support
 for Github\-Flavored Markdown; please use \f[C]gfm\f[] instead, unless
 you use extensions that do not work with \f[C]gfm\f[].) Note that
 \f[C]odt\f[], \f[C]epub\f[], and \f[C]epub3\f[] output will not be
