LaTeX reader: support column specs like `*{2}{r}`.
This is equivalent to `rr`.  We now expand it like a macro.

Closes #4056.

--- a/test/command/4056.md
+++ b/test/command/4056.md
@@ -8,4 +8,17 @@
 [RawBlock (Format "latex") "\\parbox[t]{0.4\\textwidth}{\n\\begin{shaded}\n\\end{shaded}\n}"]
 ```
 
-
+```
+% pandoc -f latex -t native
+\begin{tabular}{l*{2}{r}}
+Blah & Foo & Bar \\
+\end{tabular}
+^D
+[Table [] [AlignLeft,AlignRight,AlignRight] [0.0,0.0,0.0]
+ [[]
+ ,[]
+ ,[]]
+ [[[Plain [Str "Blah"]]
+  ,[Plain [Str "Foo"]]
+  ,[Plain [Str "Bar"]]]]]
+```
